# qt_rhi_compute_shader

./: CMakeLists.txt  README.md  arrayAdd.comp  main.cpp
